# Loan_aproval_predictionModelClassification_deployment

./: README.md  main.py  model_best.pkl  model_file  pyproject.toml
deployment/: app.py
research/: model.ipynb
src/: data_ingestion.py  data_preprocessing.py  model_building.py
